Revert "Draft of changes to source structure" (#4)
* Revert "Draft of changes to source structure (#3)"

This reverts commit eb2f16a2e21dda60e31869436d4df1dd324807bb.

* Another reboot

* Fixed validation issues

--- a/spec/definitions/Payments/PaymentRequestIdSource.yaml
+++ b/spec/definitions/Payments/PaymentRequestIdSource.yaml
@@ -6,11 +6,11 @@ allOf:
   - $ref: "#/definitions/PaymentRequestSource"
   - type: object
     properties:
-      source_type:
+      type:
         type: string
         description: The payment source type. With the exception of some alternative payment methods, this is inferred automatically
         enum:
-          - "source id"
+          - source_id
       id:
         type: string
         description: The payment source identifer for example, a card source identifier
