--- a/spec/definitions/Payments/PaymentSource.yaml
+++ b/spec/definitions/Payments/PaymentSource.yaml
@@ -1,11 +1,14 @@
 type: object
 description: Payment source
+required:
+  - id
+  - type
 properties:
   id:
     type: string
     description: The payment source identifier. Can be used for subsequent payments
     example: src_wmlfc3zyhqzehihu7giusaaawu
-  source_type:
+  type:
     type: string
     description: The type of payment source
     example: "card"
@@ -17,79 +20,73 @@ properties:
     description: The payment source owner's phone number
     allOf:
       - $ref: '#/definitions/PhoneNumber'
-  card:
-    type: object
-    properties:
-      expiry_month:
-        type: integer
-        description: The two-digit expiry month (cards)
-        minimum: 1
-        example: 6
-      expiry_year:
-        type: integer
-        description: The four-digit expiry year (cards)
-        example: 2025
-      name: 
-        type: string
-        description: The card-holder name
-        example: "Bruce Wayne"
-      scheme: 
-        type: string
-        description: The card scheme
-        example: "VISA"
-      last_4:
-        type: string
-        description: The last four digits of the card number
-        example: "9996"
-      fingerprint:
-        type: string
-        description: Uniquely identifies this particular card number. You can use this to compare cards across customers
-        example: "F639CAB2745BEE4140BF86DF6B6D6"
-      bin:
-        type: string
-        description: The card issuer BIN
-        example: "454347"
-      type:
-        type: string
-        description: The card type
-        enum: 
-          - Credit
-          - Debit
-          - Prepaid
-        example: Credit
-      category:
-        type: string
-        description: The card category
-        enum:
-          - Consumer
-          - Commercial
-        example: Consumer
-      issuer:
-        type: string
-        description: The name of the card issuer
-        example: "GOTHAM STATE BANK"
-      issuer_country:
-        type: string
-        maxLength: 2
-        minLength: 2
-        description: The card issuer country ISO-2 code
-        example: "US"
-      product_id:
-        type: string
-        description: The issuer/card scheme product identifier
-        example: "F"
-      product_type:
-        type: string
-        description: The issuer/card scheme product type
-        example: CLASSIC
-      avs_check:
-        type: string
-        description: The Address Verification System check result
-        example: S
-      cvv_check:
-        type: string
-        description: The CVV check result
-        example: Y
-required:
-  - id
-  - source_type
+  expiry_month:
+    type: integer
+    description: The two-digit expiry month
+    minimum: 1
+    example: 6
+  expiry_year:
+    type: integer
+    description: The four-digit expiry year
+    example: 2025
+  name: 
+    type: string
+    description: The card-holder name
+    example: "Bruce Wayne"
+  scheme: 
+    type: string
+    description: The card scheme
+    example: "VISA"
+  last_4:
+    type: string
+    description: The last four digits of the card number
+    example: "9996"
+  fingerprint:
+    type: string
+    description: Uniquely identifies this particular card number. You can use this to compare cards across customers
+    example: "F639CAB2745BEE4140BF86DF6B6D6"
+  bin:
+    type: string
+    description: The card issuer BIN
+    example: "454347"
+  card_type:
+    type: string
+    description: The card type
+    enum: 
+      - Credit
+      - Debit
+      - Prepaid
+    example: Credit
+  card_category:
+    type: string
+    description: The card category
+    enum:
+      - Consumer
+      - Commercial
+    example: Consumer
+  issuer:
+    type: string
+    description: The name of the card issuer
+    example: "GOTHAM STATE BANK"
+  issuer_country:
+    type: string
+    maxLength: 2
+    minLength: 2
+    description: The card issuer country ISO-2 code
+    example: "US"
+  product_id:
+    type: string
+    description: The issuer/card scheme product identifier
+    example: "F"
+  product_type:
+    type: string
+    description: The issuer/card scheme product type
+    example: CLASSIC
+  avs_check:
+    type: string
+    description: The Address Verification System check result
+    example: S
+  cvv_check:
+    type: string
+    description: The CVV check result
+    example: Y
