--- a/spec/definitions/Sources/SepaSource.yaml
+++ b/spec/definitions/Sources/SepaSource.yaml
@@ -3,14 +3,12 @@ description: A SEPA payment source
 allOf:
   - $ref: '#/definitions/SourceRequest'
   - type: object
-    required:
-      - sepa
     properties:
-      source_type:
+      type:
         type: string
         enum:
           - sepa
-      sepa:
+      source_data:
         type: object
         description: Additional data required to create SEPA payment sources
         properties:
