--- a/spec/definitions/Tokens/TokenResponse.yaml
+++ b/spec/definitions/Tokens/TokenResponse.yaml
@@ -1,5 +1,14 @@
 type: object
+description: The source of the payment
+x-extendedDiscriminator: type
+required:
+  - type
 properties:
+  type:
+    type: string
+    description: The type of card details to be tokenized
+    default: "card"
+    example: "card"
   token:
     type: string
     description: The reference token
