--- a/spec/definitions/Webhooks/WebhookRequest.yaml
+++ b/spec/definitions/Webhooks/WebhookRequest.yaml
@@ -1,11 +1,15 @@
 type: object
+required:
+  - url
 properties:
   url:
     type: string
+    description: Your webhook endpoint
     example: 'https://example.com/webhooks'
     format: url
   active:
     type: boolean
+    description: Whether the webhook is active
     default: true
     example: true
   headers:
@@ -14,6 +18,7 @@ properties:
       authorization: '1234'
   content_type:
     type: string
+    description: The content type to be sent to the webhook endpoint
     enum:
       - json
       - xml
