--- a/spec/paths/tokens.yaml
+++ b/spec/paths/tokens.yaml
@@ -4,6 +4,8 @@ post:
   summary: Request a token
   description: |
     Exchange card details or a digital wallet payment token for a reference token that can be later used to request a card payment. 
+
+    **To create tokens please authenticate using your public key**
   parameters:
     - name: body
       in: body
