--- a/spec/definitions/Payments/PaymentActionsResponse.yaml
+++ b/spec/definitions/Payments/PaymentActionsResponse.yaml
@@ -1,41 +1,38 @@
-type: object
-properties:
-  actions:
-    type: array
-    items:
-      - $ref: '#/definitions/PaymentAction'
-    minItems: 1
-    description: |
-      The payment actions
-    example: 
-      - "action_id": "act_gefycn3jcvuupboxfmqrhk2aym"
-        "action_type": "Partial Refund"
-        "processed_on": "2018-01-20T10:30:48Z"
-        "amount": 1000
-        "response_code": "10000"
-        "response_summary": "Approved"
-        "_links": 
-          "response-code": 
-            "href": "https://api.checkout.com/refs/response-codes/10000"
-      - "action_id": "act_gefycn3jcvuupboxfmqrhk2aym"
-        "action_type": "Capture"
-        "processed_on": "2018-01-17T10:30:48Z"
-        "amount": 6540
-        "response_code": "10000"
-        "response_summary": "Approved"
-        "metadata": 
-          "shipping_ref": "MQIBN2"
-        "_links": 
-          "response-code": 
-            "href": "https://api.checkout.com/refs/response-codes/10000"
-      - "action_id": "act_y3oqhf46pyzuxjbcn2giaqnb44"
-        "action_type": "Authorisation"
-        "processed_on": "2018-01-17T09:30:48Z"
-        "amount": 6540
-        "auth_code": "643381"
-        "response_code": "10000"
-        "response_summary": "Approved"
-        "reference": "ORD-5023-4E89"
-        "_links": 
-          "response-code": 
-            "href": "https://api.checkout.com/refs/response-codes/10000"
+type: array
+items:
+  - $ref: '#/definitions/PaymentAction'
+minItems: 1
+description: |
+  The payment actions
+example: 
+  - "id": "act_gefycn3jcvuupboxfmqrhk2aym"
+    "type": "Partial Refund"
+    "processed_on": "2018-01-20T10:30:48Z"
+    "amount": 1000
+    "response_code": "10000"
+    "response_summary": "Approved"
+    "_links": 
+      "response-code": 
+        "href": "https://api.checkout.com/refs/response-codes/10000"
+  - "id": "act_gefycn3jcvuupboxfmqrhk2aym"
+    "type": "Capture"
+    "processed_on": "2018-01-17T10:30:48Z"
+    "amount": 6540
+    "response_code": "10000"
+    "response_summary": "Approved"
+    "metadata": 
+      "shipping_ref": "MQIBN2"
+    "_links": 
+      "response-code": 
+        "href": "https://api.checkout.com/refs/response-codes/10000"
+  - "id": "act_y3oqhf46pyzuxjbcn2giaqnb44"
+    "type": "Authorisation"
+    "processed_on": "2018-01-17T09:30:48Z"
+    "amount": 6540
+    "auth_code": "643381"
+    "response_code": "10000"
+    "response_summary": "Approved"
+    "reference": "ORD-5023-4E89"
+    "_links": 
+      "response-code": 
+        "href": "https://api.checkout.com/refs/response-codes/10000"
