--- a/spec/definitions/Payments/Payment.yaml
+++ b/spec/definitions/Payments/Payment.yaml
@@ -49,16 +49,8 @@ properties:
     description: A description of the payment
     example: Set of 3 masks
   status:
-    type: string
-    description: The current status of the payment
-    enum:
-      - Authorised
-      - Voided
-      - Deferred Capture
-      - Captured
-      - Partially Refunded
-      - Refunded
-      - Declined
+    allOf:
+      - $ref: '#/definitions/PaymentStatus'
   3ds:
     type: boolean
     description: Whether this payment was processed with 3D-Secure
