--- a/spec/definitions/Payments/PaymentActionsResponse.yaml
+++ b/spec/definitions/Payments/PaymentActionsResponse.yaml
@@ -9,6 +9,7 @@ example:
     "type": "Partial Refund"
     "processed_on": "2018-01-20T10:30:48Z"
     "amount": 1000
+    "approved": true
     "response_code": "10000"
     "response_summary": "Approved"
     "_links": 
@@ -18,6 +19,7 @@ example:
     "type": "Capture"
     "processed_on": "2018-01-17T10:30:48Z"
     "amount": 6540
+    "approved": true
     "response_code": "10000"
     "response_summary": "Approved"
     "metadata": 
@@ -29,6 +31,7 @@ example:
     "type": "Authorisation"
     "processed_on": "2018-01-17T09:30:48Z"
     "amount": 6540
+    "approved": true
     "auth_code": "643381"
     "response_code": "10000"
     "response_summary": "Approved"
