--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -50,15 +50,16 @@ properties:
     type: string
     description: The Gateway response summary
     example: "Approved"
+  3ds:
+    type: object
+    description: Provides information relating to the processing of 3D-Secure payments
+    allOf:
+      - $ref: '#/definitions/3dsData'
   flagged:
     type: boolean
     description: Whether the payment was flagged by a risk check
     default: false
     example: true
-  3ds_downgraded:
-    type: boolean
-    description: Whether this was a 3DS transaction, downgraded to Non-3DS (when `attempt_n3d` is specified)
-    example: false
   source:
     description: The source of the payment
     type: object
