Full 3DS data is only available on Get Payment

--- a/spec/definitions/Payments/PaymentAcceptedResponse.yaml
+++ b/spec/definitions/Payments/PaymentAcceptedResponse.yaml
@@ -24,6 +24,11 @@ properties:
     description: The customer to which this payment is linked
     allOf:
       - $ref: '#/definitions/PaymentResponseCustomer'
+  3ds:
+    type: object
+    description: Provides 3D-Secure enrollment status
+    allOf:
+      - $ref: '#/definitions/3dsEnrollmentData'
   _links:
     type: object
     description: Payment links
