Added 502 response for all operations that communicate with third parties

--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -126,3 +126,5 @@ post:
       description: Unauthorized
     '422':
       $ref: '#/responses/InvalidDataError'
+    '502':
+      description: Bad gateway
