--- a/spec/paths/sources.yaml
+++ b/spec/paths/sources.yaml
@@ -25,3 +25,5 @@ post:
       description: Unauthorized
     '422':
       $ref: '#/responses/InvalidDataError'
+    '502':
+      description: Bad gateway
