--- a/spec/definitions/Payments/PaymentRecipient.yaml
+++ b/spec/definitions/Payments/PaymentRecipient.yaml
@@ -1,5 +1,5 @@
 type: object
-description: Required by VISA and MasterCard for domestic UK transactions processed by Financial Institutions. [Read more](https://docs.checkout.com/reference/merchant-api-reference/complex-request-objects/visa-requirements-for-financial-institutions)
+description: Required by VISA and MasterCard for domestic UK transactions processed by Financial Institutions. [Read more](https://beta.docs.checkout.com/docs/requirements-for-financial-institutions)
 properties:
   dob:
     type: string
@@ -8,17 +8,19 @@ properties:
     example: "1985-05-15"
   account_number:
     type: string
-    description: The first six digits and the last four digits of the primary recipient's card, without spaces, or, up to ten characters of the primary recipient's account number
-    minLength: 10
-    maxLength: 10
+    description: VISA: The first six digits and the last four digits of the primary recipient's card, without spaces, or, up to ten characters of the primary recipient's account number. MasterCard: The primary recipient's full card number.
+    minLength: 10 (VISA) / 20 (MasterCard)
+    maxLength: 10 (VISA) / 20 (MasterCard)
     example: "5555554444"
   zip:
     type: string
     description: The first part of the UK postcode for example W1T 4TJ would be W1T
+    maxLength: 6
     example: W1T 
   last_name:
     type: string
-    description: The last name of the recipient
+    description: The first six characters of the recipient's last name
+    maxLength: 6
     example: Jones
 required:
   - dob
